main.tf
# 1. Create the VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = { Name = "AutomatedPros-VPC" }
}

# 2. Create a Public Subnet which would be where our web server lives
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  tags = { Name = "Public-Subnet" }
}

# 3. Create an Internet Gateway which would allow us access the internet
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

# 4. Route Table which will route resources within the network
resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.rt.id
}

# 5. Security Group is the firewall which would monitor entry & exit of network traffic
resource "aws_security_group" "web_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# 6. The EC2 Server is the Computer
resource "aws_instance" "web_server" {
  ami           = "ami-0cff7528ff583bf9a" # Amazon Linux 2 AMI
  instance_type = "t2.micro"             # Free tier eligible
  subnet_id     = aws_subnet.public.id
  vpc_security_group_ids = [aws_security_group.web_sg.id]

  # LINK TO MY BOOTSTRAP SCRIPT
  user_data = file("bootstrap.sh")

  tags = { Name = "Chef-Automation-for AutomatedPros-TI-Prep-Demo" }
}

# Output the IP so I can find it easily
output "server_public_ip" {
  value = aws_instance.web_server.public_ip
}
